<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_overview"
        android:icon="@drawable/ic_overview"
        android:title="@string/nav_overview" />

    <item
        android:id="@+id/nav_budget"
        android:icon="@drawable/ic_budget"
        android:title="@string/nav_budget" />

    <item
        android:id="@+id/nav_savings"
        android:icon="@drawable/ic_savings"
        android:title="@string/nav_savings" />

    <item
        android:id="@+id/nav_rewards"
        android:icon="@drawable/ic_rewards"
        android:title="@string/nav_rewards" />

    <item
        android:id="@+id/nav_profile"
        android:icon="@drawable/ic_profile"
        android:title="@string/nav_profile" />

</menu>
